Update 'go-hsbinrva' component image to: quay.io/rhtap_qe/go-hsbinrva:2c4a75c58ee1a61383c2eed258a8452b7d4fa5e9@sha256:e6034ac97dcd58dca0edc4e86dd76f6308919e4f425b3da479a116044ac83605

--- a/components/go-hsbinrva/overlays/development/deployment-patch.yaml
+++ b/components/go-hsbinrva/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: go-hsbinrva
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/rhtap-task-runner:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/go-hsbinrva:2c4a75c58ee1a61383c2eed258a8452b7d4fa5e9@sha256:e6034ac97dcd58dca0edc4e86dd76f6308919e4f425b3da479a116044ac83605
+          name: container-image
